--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -1,19 +1,22 @@
 @import "_mixins/_px-to-rem"
+@import "vars"
 
 *
 	box-sizing: border-box
 	&:before, &:after
 		box-sizing: border-box
-
+html
+	font-size: 100%
 html, body
 	height: 100%
 
 body
-	font-size: 16px
+	font-size: 1rem
 	min-width: 320px
 	position: relative
-	line-height: 1.65
-	font-family: raleway-example, sans-serif
+	line-height: 1.6
+	font-weight: 400
+	font-family: 'Exo 2', sans-serif
 	overflow-x: hidden
 	opacity: 1
 
@@ -24,3 +27,6 @@ body
 
 .text-center
 	text-align: center
+
+.accent
+	color: $orange
