--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -5,6 +5,129 @@
 @import "base"
 @import "vars"
 
-// Пользовательские стили
+.header 
+   height: 100vh
+   width: 100%
+   background-image: url(../img/first-bg.jpg)
+   background-size: cover
+   position: relative
+   padding-top: rem(50px)
+   color: #fff
+   &::before
+      content: ''
+      display: block
+      position: absolute
+      width: 100%
+      height: 100%
+      top: 0
+      left: 0
+      bottom: 0
+      right: 0
+      background-color: rgba(0,0,0,.5)
+   &__content
+      height: 100%
+      z-index: 1
+      position: relative
+      display: flex
+      flex-direction: column
+      justify-content: space-between
+      
+
+.top-line
+   display: flex
+   justify-content: space-between
+   align-items: center
+
+.logo
+   &__img
+      width: rem(200px)
+      height: auto
+
+.phone
+   font-size: rem(24px)
+   border: 1px solid transparent
+   transition: border-bottom-color $main-trans
+   &:hover
+      border-bottom-color: rgba(255,255,255,.75)
+   &__link
+      display: inline-block
+      color: #fff
+      text-decoration: none
+      font-weight: 600
+   &__icon
+      margin-right: rem(5px)
+      color: #fff
+      font-size: rem(25px)
+      position: relative
+      top: 1px
+
+.promo
+   color: #fff
+   &__wrap
+      display: inline-block
+   &__title
+      font-size: rem(44px)
+      line-height: 1.1
+      font-weight: 800
+      margin-top: 0
+      margin-bottom: rem(25px)
+      text-shadow: $text-shadow
+      letter-spacing: 1px
+      &-company
+         position: relative
+         &::after
+            font-family: "Font Awesome 5 Free"
+            content: "\f085"
+            font-size: rem(30px)
+            position: absolute
+            top: rem(4px)
+            right: rem(-44px)
+   &__text
+      display: inline-block
+      padding: rem(10px 18px)
+      background-color: rgba(255,255,255,.25)
+      border-left: 4px solid $orange
+      font-size: rem(20px)
+      font-weight: 500
+      line-height: 1.3
+      letter-spacing: 0.35px
+      text-shadow: $text-shadow
+      margin-bottom: rem(20px)
+   &__btn-wrap
+      text-align: center
+   &__btn
+      display: inline-block
+      color: #fff
+      text-decoration: none
+      font-size: rem(18px)
+      line-height: 1
+      font-weight: 600
+      border: 3px solid #fff
+      border-radius: 2rem
+      padding: rem(16px 40px)
+      transition: background-color $main-trans, color $main-trans
+      &:hover
+         background-color: #fff
+         color: $default-color
+
+
+
+.head-cont
+   border-top: 1px solid rgba(255,255,255,.5)
+   padding: rem(25px 0 30px 0)
+   &__wrap
+      display: flex
+      justify-content: space-between
+      font-size: rem(20px)
+      line-height: 1
+      font-weight: 500
+   &__icon
+      font-size: rem(21px)
+      margin-right: rem(5px)
+      position: relative
+      top: 1px
+   &__link
+      color: #fff
+      text-decoration: none
 
 @import "media" // Всегда в конце
