--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -14,7 +14,7 @@ body
 	font-size: 1rem
 	min-width: 320px
 	position: relative
-	line-height: 1.6
+	line-height: 1.2
 	font-weight: 400
 	font-family: 'Exo 2', sans-serif
 	overflow-x: hidden
@@ -30,3 +30,12 @@ body
 
 .accent
 	color: $orange
+
+.sect-wrap
+	padding: rem(70px 0 50px 0)
+	&__title
+		font-size: rem(50px)
+		font-weight: 800
+		margin-top: 0
+		margin-bottom: rem(50px)
+		text-align: center
