--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -5,6 +5,7 @@
 @import "base"
 @import "vars"
 
+/* HEADER */
 .header 
    height: 100vh
    width: 100%
@@ -111,7 +112,6 @@
          color: $default-color
 
 
-
 .head-cont
    border-top: 1px solid rgba(255,255,255,.5)
    padding: rem(25px 0 30px 0)
@@ -129,5 +129,43 @@
    &__link
       color: #fff
       text-decoration: none
+/**/
 
+/* SECTION SERVICES */
+.serv-card
+	margin-bottom: rem(50px)
+	&__col
+		display: flex
+	&__item
+		background-color: $grey
+		border-radius: 2px 2px 10px 10px
+		overflow: hidden
+		margin-bottom: rem(50px)
+	&__img
+		width: 100%
+		padding: 35%
+		background-size: cover
+		background-position: center
+	&__content
+		padding: rem(20px 15px 25px 15px)
+	&__title
+		margin: rem(5px 0 15px 0)
+		font-size: rem(22px)
+		text-align: center
+		line-height: 1.05
+	&__text
+		font-size: rem(18px)
+		margin-bottom: rem(20px)
+	&__price
+		text-align: center
+		font-size: rem(20px)
+		line-height: 1
+		font-weight: 800
+		padding-right: rem(25px)
+		&-num
+			margin: 0 3px
+		&_npr
+			padding-right: 0
+
+/**/
 @import "media" // Всегда в конце
