--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -1,55 +1,36 @@
 @import "vars"
 
-/*==========  Desktop First  ==========*/
+/* xlg */
+@media only screen and (max-width : 1440px)
+	/**/
 
-/* Large Devices, Wide Screens */
+
+/* xl */
 @media only screen and (max-width : 1200px)
 	/**/
 
 
-/* Medium Devices, Desktops */
+/* lg */
 @media only screen and (max-width : 992px)
 	/**/
 
 
-/* Small Devices, Tablets */
+/* md */
 @media only screen and (max-width : 768px)
 	/**/
 
 
-/* Extra Small Devices, Phones */
+/* sm */
+@media only screen and (max-width : 576px)
+	/**/
+
+
+/* sm- */
 @media only screen and (max-width : 480px)
 	/**/
 
 
-/* Custom, iPhone Retina */
+/* xs */
 @media only screen and (max-width : 320px)
-	/**/
-
-
-/*==========  Mobile First  ==========*/
-
-/* Custom, iPhone Retina */
-@media only screen and (min-width : 320px)
-	/**/
-
-
-/* Extra Small Devices, Phones */
-@media only screen and (min-width : 480px)
-	/**/
-
-
-/* Small Devices, Tablets */
-@media only screen and (min-width : 768px)
-	/**/
-
-
-/* Medium Devices, Desktops */
-@media only screen and (min-width : 992px)
-	/**/
-
-
-/* Large Devices, Wide Screens */
-@media only screen and (min-width : 1200px)
 	/**/
 
