--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,3 +1,4 @@
 @import "../libs/normalize-css/normalize.css"
 @import "../libs/bootstrap/grid.css"
 @import "../libs/fontawesome/css/all.css"
+@import "../libs/selectize/css/selectize.css"
