--- a/app/libs/bootstrap/grid.css
+++ b/app/libs/bootstrap/grid.css
@@ -6,8 +6,8 @@
  */
  .container {
    width: 100%;
-   padding-right: 1rem;
-   padding-left: 1rem;
+   padding-right: 15px;
+   padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
  }
@@ -44,8 +44,8 @@
  
  .container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
    width: 100%;
-   padding-right: 1rem;
-   padding-left: 1rem;
+   padding-right: 15px;
+   padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
  }
@@ -82,8 +82,8 @@
  .row {
    display: flex;
    flex-wrap: wrap;
-   margin-right: -0.75rem;
-   margin-left: -0.75rem;
+   margin-right: -15px;;
+   margin-left: -15px;;
  }
  
  .row > * {
@@ -91,8 +91,8 @@
    flex-shrink: 0;
    width: 100%;
    max-width: 100%;
-   padding-right: 0.75rem;
-   padding-left: 0.75rem;
+   padding-right: 15px;;
+   padding-left: 15px;;
  }
  
  .g-0,
