--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -41,10 +41,11 @@
 
 .logo
    &__img
-      width: rem(200px)
+      width: 200px
       height: auto
 
 .phone
+   display: inline-block
    font-size: rem(24px)
    border: 1px solid transparent
    transition: border-bottom-color $main-trans
@@ -122,6 +123,7 @@
 	&__col
 		display: flex
 	&__item
+		width: 100%
 		background-color: $grey
 		border-radius: 2px 2px 10px 10px
 		overflow: hidden
@@ -146,7 +148,7 @@
 		font-size: rem(20px)
 		line-height: 1
 		font-weight: 800
-		padding-right: rem(25px)
+		// padding-right: rem(25px)
 	&-num
 		margin: 0 3px
 	&_npr
@@ -244,10 +246,10 @@
 		z-index: 1
 	&__info
 		position: absolute
-		top: 75px
-		margin-bottom: 75px
-		right: 100px
-		padding: rem(25px 35px)
+		top: rem(75px)
+		margin-bottom: rem(75px)
+		right: rem(100px)
+		padding: rem(25px)
 		background-color: rgba(255,255,255,0.8)
 		border: 1px solid rgba(0,0,0,.05)
 		border-radius: 10px
